syntax = "proto3";
option go_package=".;pb";

message Person {
    string Name = 1;
    int32 Age = 2;
    string From = 3;
}

message RegisterAccountReq {
	string UserName = 1;
	string Password = 2;
}

message LoginAccountReq {
  string UserName = 1;
  string Password = 2;
}

// 登录账号的响应
message LoginAccontRep {
  int64  AccountId = 1;
  repeated  PlayerList pList = 2; // 角色列表
  int32 errCode = 3;  // 错误码
}

message PlayerList {
  int64 PlayerId = 1; // 角色ID
  string PlayerName = 2; // 名字
  int64 Gold = 3; // 金币数量
  int32 Level = 4; // 等级
  int64 AccountID = 5;
}

message Test {
  string Name = 1;
  string PassWord =2;
}

// 内部消息
message Disconnect {
  uint32 connId = 1;
}

//角色登录请求
message LoginPlayerReq {
  int64 PlayerId = 1; // 角色ID
  int64 AccountID = 2;
}

message LoginPlayerRep {
  int32 errCode = 1;  // 错误码
  int64 PlayerId = 2; // 角色ID

}

message CreatePlayerReq {
  string Name = 1;  // 角色名字
  int64 AccountID = 2; // 账号ID
}

message CreatePlayerRep {
  int32 errCode = 1;  // 错误码
  int64 PlayerId = 2; // 角色ID
  string Name = 3;  // 角色名字
}

message RoleSelectListRep {
  int64  AccountId = 1;
  repeated  PlayerList pList = 2; // 角色列表
}